testsuite/tests/parser/should_fail/ParserNoLambdaCase.hs
{-# LANGUAGE NoLambdaCase #-}
module ParserNoLambdaCase where
f = \case "1" -> 1

