testsuite/tests/parser/should_fail/ParserNoLambdaCase.stderr

ParserNoLambdaCase.hs:3:5: parse error: naked lambda expression ''
